TeacherSubject hooks, some doc improvement, fix doc
