# src/Presentation/Web/Controller/TeacherSubjectController.php
@@ -2,16 +2,16 @@
 
 namespace App\Presentation\Web\Controller;
 
-use App\Application\Dto\StudentSubject\GetAllStudentSubjectsDto;
-use App\Application\Dto\StudentSubject\GetMyStudentSubjectsDto;
-use App\Application\UseCase\StudentSubject\GetAllUseCase;
-use App\Application\UseCase\StudentSubject\GetMyUseCase;
+use App\Application\Dto\TeacherSubject\GetAllTeacherSubjectsDto;
+use App\Application\Dto\TeacherSubject\GetMyTeacherSubjectsDto;
+use App\Application\UseCase\TeacherSubject\GetAllUseCase;
+use App\Application\UseCase\TeacherSubject\GetMyUseCase;
 use App\Domain\Enum\PermissionEnum;
 use App\Presentation\Web\OpenApi\Attribute as LOA;
 use App\Presentation\Web\Response\Model\Common\PaginatedData;
 use App\Presentation\Web\Response\Model\Common\SuccessWithPaginationResponse;
-use App\Presentation\Web\Response\Model\MyStudentSubject;
-use App\Presentation\Web\Response\Model\StudentSubject;
+use App\Presentation\Web\Response\Model\MyTeacherSubject;
+use App\Presentation\Web\Response\Model\TeacherSubject;
 use App\Presentation\Web\Response\Response;
 use OpenApi\Attributes as OA;
 use Psr\Log\LoggerInterface;
@@ -20,23 +20,23 @@ use Symfony\Component\HttpKernel\Attribute\MapQueryString;
 use Symfony\Component\Routing\Attribute\Route;
 use Symfony\Component\Security\Http\Attribute\IsGranted;
 
-class StudentSubjectController extends BaseController
+class TeacherSubjectController extends BaseController
 {
-    /** Список предметов студентов с пагинацией и фильтрацией */
-    #[Route('/student-subjects', 'get-all-student-subjects', methods: ['GET'])]
-    #[IsGranted(PermissionEnum::StudentSubjectViewAll->value, statusCode: 404, exceptionCode: 404)]
-    #[OA\Tag('student-subjects')]
+    /** Список предметов преподавателей с пагинацией и фильтрацией */
+    #[Route('/teacher-subjects', 'get-all-teacher-subjects', methods: ['GET'])]
+    #[IsGranted(PermissionEnum::TeacherSubjectViewAll->value, statusCode: 404, exceptionCode: 404)]
+    #[OA\Tag('teacher-subjects')]
     #[LOA\ErrorResponse(500)]
     #[LOA\ValidationResponse]
     #[LOA\ErrorResponse(400)]
     #[LOA\ErrorResponse(401)]
     #[LOA\ErrorResponse(404)]
-    #[LOA\SuccessPaginationResponse(StudentSubject::class)]
+    #[LOA\SuccessPaginationResponse(TeacherSubject::class)]
     public function getAll(
         LoggerInterface $logger,
         GetAllUseCase $useCase,
         #[MapQueryString(validationFailedStatusCode: 422)]
-        GetAllStudentSubjectsDto $dto = new GetAllStudentSubjectsDto(),
+        GetAllTeacherSubjectsDto $dto = new GetAllTeacherSubjectsDto(),
     ): JsonResponse {
         $useCase->setLogger($logger);
         $provider = $useCase->execute($dto);
@@ -44,27 +44,27 @@ class StudentSubjectController extends BaseController
             new SuccessWithPaginationResponse(
                 PaginatedData::fromDataProvider(
                     $provider,
-                    StudentSubject::fromStudentSubject(...),
+                    TeacherSubject::fromTeacherSubject(...),
                 ),
             ),
         );
     }
 
     /** Список моих предметов с пагинацией и фильтрацией */
-    #[Route('/student-subjects/my', 'get-my-student-subjects', methods: ['GET'])]
-    #[IsGranted(PermissionEnum::StudentSubjectViewMy->value, statusCode: 404, exceptionCode: 404)]
-    #[OA\Tag('student-subjects')]
+    #[Route('/teacher-subjects/my', 'get-my-teacher-subjects', methods: ['GET'])]
+    #[IsGranted(PermissionEnum::TeacherSubjectViewMy->value, statusCode: 404, exceptionCode: 404)]
+    #[OA\Tag('teacher-subjects')]
     #[LOA\ErrorResponse(500)]
     #[LOA\ValidationResponse]
     #[LOA\ErrorResponse(400)]
     #[LOA\ErrorResponse(401)]
     #[LOA\ErrorResponse(404)]
-    #[LOA\SuccessPaginationResponse(MyStudentSubject::class)]
+    #[LOA\SuccessPaginationResponse(MyTeacherSubject::class)]
     public function getMy(
         LoggerInterface $logger,
         GetMyUseCase $useCase,
         #[MapQueryString(validationFailedStatusCode: 422)]
-        GetMyStudentSubjectsDto $dto = new GetMyStudentSubjectsDto(),
+        GetMyTeacherSubjectsDto $dto = new GetMyTeacherSubjectsDto(),
     ): JsonResponse {
         $useCase->setLogger($logger);
         $provider = $useCase->execute($this->getUser()->getUser(), $dto);
@@ -72,7 +72,7 @@ class StudentSubjectController extends BaseController
             new SuccessWithPaginationResponse(
                 PaginatedData::fromDataProvider(
                     $provider,
-                    MyStudentSubject::fromStudentSubject(...),
+                    MyTeacherSubject::fromTeacherSubject(...),
                 ),
             ),
         );
